# Poss

./: .gitignore  Cashier.py  README.md  db_manager.py  deepseek.py  deepseek_ui.py  main.py  pyproject.toml  real_ui.py  synthesize.py  ui.py
ASR/: main.py
prompt/: Prompt_v1.txt
src/: Cashier.py  db_manager.py  deepseek.py  deepseek_ui.py  main.py  real_ui.py
src/ASR/: Asr.py  Recorder.py
src/TTS/: synthesize.py
src/prompt/: Prompt_v1.txt
